--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,12 @@ li{
     padding: 10px;
     display: flex;
 }
+
+
+
+.d-block{
+    display: block;
+}
 /* HEADER */
 header{
     color: #858585;
@@ -46,6 +52,52 @@ img{
     margin: 3px;
 }
 .start{
-    padding: 4px;
+    padding: 6px;
     margin: 2px auto;
+}
+
+.jumbotron{
+    width: 100%;
+    background-color: #b4d0e7;
+}
+.container2{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.content1{
+    width: 100%;
+    font-size: 40px;
+    padding: 60px 0;
+}
+
+.content2{
+    width: 100%;
+    display: flex;
+    gap:10px 20px;
+}
+
+.blue{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.green{
+    width: 75%;
+    height: 420px;
+}
+
+.jumbo{
+    width: 100%;
+} 
+
+.arrow{
+    font-size: 40px;
+}
+/* button jumbo */
+.b2{
+     padding: 13px;
+     margin-left: 0;
+     margin-right: 90px;
 }
