--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,12 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 /* COMMON */
-
+.border-grey{
+    border: 1px solid lightgrey;
+}
+.d-flex{
+    display: flex;
+}
 
 .margin-25{
     margin-top: 25px;
@@ -91,7 +96,7 @@ img{
 }
 .green{
     width: 75%;
-    height: 420px;
+    height: 460px;
 }
 
 .jumbo{
@@ -129,8 +134,12 @@ img{
     width: 100%;
 }
 
-.col-50{
-    width: calc(50% - 40px)
+.col-60{
+    width: calc(60% - 40px)
+}
+
+.col-40{
+    width: calc(40% - 40px);
 }
 
 .content3{
@@ -164,7 +173,7 @@ h2{
     justify-content: center;
     align-items: center;
     margin: 15px 0 ;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid lightgrey;
     padding-bottom: 10px;
 }
 
@@ -194,7 +203,7 @@ h5{
 }
 
 .b-advantages{
-    margin-top: 50px;
+    margin-top: 30px;
     padding: 15px;
     font-size: 15px;
     margin-bottom: 30px;
@@ -202,6 +211,54 @@ h5{
 
 u{
     color: blue;
+}
+
+.enterprise{
+    width: 60%;
+    
+}
+
+.contact{
+    width: 40%;
+    text-align: end;
+}
+
+.description-plan{
+    padding: 60px 0 30px;
+}
+
+.b-contact{
+    margin: 30px;
+    font-size: 15px;
+    padding: 15px 50px;
+}
+
+.partner{
+    width: auto;
+    margin: 0;
+    height: 600px;
+}
+
+.title-partner{
+    margin: 60px 0 30px;
+}
+
+.p-partner{
+    margin-bottom: 30px;
+    font-size: 18px;
+}
+
+.b-partner{
+    padding: 13px;
+    font-size: 19px;
+    color: #3a3a3a;
+    background-color: white;
+    border: 2px solid #3a3a3a;
+}
+
+.content3-partner{
+    margin: 30px;
+    padding: 0 20px;
 }
 
 
