--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,7 @@ header{
     display: flex;
 }
 
-img{
-    margin: 3px;
-}
+
 .start{
     padding: 6px;
     margin: 2px auto;
@@ -96,7 +94,7 @@ img{
 }
 .green{
     width: 75%;
-    height: 460px;
+    height: 500px;
 }
 
 .jumbo{
@@ -105,6 +103,7 @@ img{
 
 .arrow{
     font-size: 40px;
+    margin-bottom: 10px;
 }
 /* button jumbo */
 .b2{
@@ -153,8 +152,13 @@ h2{
     margin: 60px auto;
 }
 
+hr{
+    margin: 30px;
+    width: 50px;
+}
+
 .radio{
-    margin: 60px auto;
+    margin: 0px auto;
 }
 
 .icon{
@@ -261,4 +265,22 @@ u{
     padding: 0 20px;
 }
 
+.row-2{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 30px;
+}
 
+.col-33b {
+    width: calc(100% / 3 - 20px);
+}
+
+
+.cover-skills{
+    width: 100%;
+}
+
+.title-skills{
+    margin: 20px 0 35px;
+}
