--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 /* COMMON */
+.bottom-100{
+    margin-bottom: 100px;
+}
+.margin-50{
+    margin: 50px;
+}
+.c-grey{
+    background-color: #f5f5f5;
+}
 
 .font-45{
     font-size: 45px;
@@ -308,7 +317,7 @@ u{
     width: 100%;
 }
 
-.col-33b{
+.col-33c{
     width: calc(100% / 3);
 }
 
@@ -369,4 +378,65 @@ u{
 
 .c-yellowb{
     background-color: #ffd830;
+}
+
+.designit{
+    font-size: 80px;
+    position: relative;
+}
+
+.reg{
+    position: absolute;
+    font-size: 23px;
+    right: 332px;
+    top: 9px;
+    
+}
+
+.company{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+b{
+    font-weight: bolder;
+}
+
+.r2{
+    margin: 50px;
+    width: 50px;
+}
+
+.cit{
+    display: block;
+    font-size: 20px;
+}
+
+.container3-2{
+    max-width: 1200px;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+    padding: 85px 0;
+}
+.b-business{
+    border: none;
+    background-color: white;
+    color: black;
+    padding: 12px 30px;
+}
+
+.font-red{
+    color: #61082b;
+}
+
+.faq{
+    border-bottom: 1px solid lightgrey;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 0;
+}
+
+.downarrow{
+    width: 20px;
 }
